docs-kits_versioned_docs/version-23.12/kits/Digital Twin Kit/page_changelog.md
---
id: Digital Twin Kit Changelog
title: Changelog
description: 'Digital Twin Kit'
sidebar_position: 1
---

![DT Kit Pictotogram](assets/img/DTKIT_pictogram_blue.png)

### Digital Twin KIT

All notable changes to this Kit will be documented in this file.

## [1.1.0] - 2023-12-05

### Added

- remarks on versioning
- guidance for adding submodels to existing twins

### Changed

- A couple of clarifications and bugfixes for R23-12
- Version of Kit incremented as minor revision since no breaking changes occurred.

## [1.0.0] - 2023-08-17

### Added

- version from release

### Changed

- couple of bugfixes raised by reviewers

## [0.2.0] - 2023-08-08

<h3>Added</h3>

- Additional figure on terminology
- section on entire discovery mechanism
- pictograms

<h3>Changed</h3>

- Clarification on decentralization of registries
- Minor improvements based on stakeholders' feedback
- figures optimized for dark backgrounds
- example data adjusted to standards for CX R3.2

<h3>Removed</h3>

- ./.

## [0.1.0] - 2023-07-12

<h3>Added</h3>

- Initial version of the Kit including adoption, operation and development view incl. all relevant API specifications.

<h3>Changed</h3>

- ./.

<h3>Removed</h3>

- ./.
