docs-kits_versioned_docs/version-24.05/kits/Digital Twin Kit/page_changelog.md
---
id: Digital Twin Kit Changelog
title: Changelog
description: 'Digital Twin Kit'
sidebar_position: 1
---

![DT Kit Pictotogram](/img/kit-icons/digital-twin-kit-icon.svg)

### Digital Twin KIT

All notable changes to this Kit will be documented in this file.

## [2.0.0] - unreleased

### Added

### Changed

- Changed banner image file location and converted .png image to .svg
- Adopted the changes to R24-05. Breaking changes:
  - replacing the property `"asset:prop:type": "data.core.digitalTwinRegistry` with `"http://purl.org/dc/terms/type":"https://w3id.org/catenax/taxonomy#DigitalTwinRegistry`
- Corrected multiple minor inconsistencies and feature requests

### Removed

- ./.

## [1.2.0] - 2024-03-02

- Added more details on interaction patterns
- Added guidance on confidentiality classification of properties
- bugfixes, clarifications

## [1.1.0] - 2023-12-05

### Added

- remarks on versioning
- guidance for adding submodels to existing twins

### Changed

- A couple of clarifications and bugfixes for R23-12
- Version of Kit incremented as minor revision since no breaking changes occurred.

## [1.0.0] - 2023-08-17

### Added

- version from release

### Changed

- couple of bugfixes raised by reviewers

## [0.2.0] - 2023-08-08

<h3>Added</h3>

- Additional figure on terminology
- section on entire discovery mechanism
- pictograms

<h3>Changed</h3>

- Clarification on decentralization of registries
- Minor improvements based on stakeholders' feedback
- figures optimized for dark backgrounds
- example data adjusted to standards for CX R3.2

<h3>Removed</h3>

- ./.

## [0.1.0] - 2023-07-12

<h3>Added</h3>

- Initial version of the Kit including adoption, operation and development view incl. all relevant API specifications.

<h3>Changed</h3>

- ./.

<h3>Removed</h3>

- ./.

## Notice

This work is licensed under the [CC-BY-4.0](https://creativecommons.org/licenses/by/4.0/legalcode).

- SPDX-License-Identifier: CC-BY-4.0
- SPDX-FileCopyrightText: 2023 Contributors of the Eclipse Foundation
- Source URL: [https://github.com/eclipse-tractusx/tractusx-edc](https://github.com/eclipse-tractusx/tractusx-edc)
